--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,7 +4,7 @@
 @import "base/base";
 @import "base/typography";
 
-@import "components/contact-form";
+@import "components/contacts-list";
 @import "components/person";
 @import "components/progress-bars";
 @import "components/project";
