added two js projects and 3 react projects + changed the footer

--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -59,6 +59,12 @@ a {
 	align-items: center;
 }
 
+// .left {
+// 	display: flex;
+// 	justify-content: left;
+// 	align-items: center;
+// }
+
 .wrap {
    flex-wrap: wrap;
 }
